# ai-assist

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  COMMANDS.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  MCP_INTEGRATION_FIX.md  Makefile  QUICKSTART.md  README.md  SECURITY.md  TASKS.md  VERTEX_AI_SETUP.md  discover_vertex_models.py  main.py  pyproject.toml  setup-dev.sh
.ai-assist/: identity.yaml.example  mcp_servers.yaml.example  monitors.yaml.example  schedules.json.example
.boss/: mcp_servers.yaml.example  monitors.yaml.example
.github/workflows/: ci.yml
ai_assist/: __init__.py  action_engine.py  action_scheduler.py  action_tools.py  agent.py  audit.py  awl_ast.py  awl_executor.py  awl_expressions.py  awl_parser.py  awl_runtime.py  awl_visualization.py  code_watcher.py  commands.py  conditions.py  config.py  config_watcher.py  context.py  embedding.py  escape_watcher.py  eval.py  file_watchdog.py  filesystem_tools.py  goal_runner.py  goal_state.py  goal_tools.py  identity.py  introspection_tools.py  json_tools.py  kg_queries.py  kg_query_tools.py  kg_visualization.py  knowledge_graph.py  knowledge_tools.py  main.py  mcp_stdio_fix.py  message_utils.py  monitor_runner.py  monitors.py  notification_channels.py  (+23 more)
ai_assist/sandbox_templates/: .env.example  allowed_paths.json  compose.yaml  event-schedules.json  identity.yaml  mcp_servers.yaml
boss/: __init__.py  agent.py  conditions.py  config.py  context.py  introspection_tools.py  knowledge_graph.py  main.py  monitor_runner.py  monitors.py  state.py  task_runner.py  task_watcher.py  tasks.py  tui.py  tui_interactive.py
docs/: AWL_SPECIFICATIONS.md  IDENTITY.md  INSPECTING_KNOWLEDGE.md  KNOWLEDGE_MANAGEMENT.md  KNOWLEDGE_QUICK_START.md  LOGGING.md  MULTI_INSTANCE.md  PERSONAL_SKILLS.md  SCHEDULED_ACTIONS.md  SLACK_SKILL_SETUP.md
emacs/: awl-mode.el
eval/: README.md  eval.yaml  eval_wrapper.py  run_eval.py
eval/dataset/cases/action-schedule/: annotations.yaml  input.yaml
eval/dataset/cases/fs-list/: annotations.yaml  input.yaml
eval/dataset/cases/fs-read/: annotations.yaml  input.yaml
eval/dataset/cases/fs-search/: annotations.yaml  input.yaml
eval/dataset/cases/jq-filter-json/: annotations.yaml  input.yaml
eval/dataset/cases/kg-recent/: annotations.yaml  input.yaml
eval/dataset/cases/kg-save/: annotations.yaml  input.yaml
eval/dataset/cases/kg-search/: annotations.yaml  input.yaml
eval/dataset/cases/kg-stats/: annotations.yaml  input.yaml
eval/dataset/cases/report-list/: annotations.yaml  input.yaml
eval/dataset/cases/report-read/: annotations.yaml  input.yaml
eval/dataset/cases/report-read/fixtures/reports/: status.md
eval/dataset/cases/report-write/: annotations.yaml  input.yaml
eval/dataset/cases/schedule-create/: annotations.yaml  input.yaml
eval/dataset/cases/schedule-list/: annotations.yaml  input.yaml
eval/dataset/cases/think/: annotations.yaml  input.yaml
eval/dataset/cases/tool-help/: annotations.yaml  input.yaml
examples/: README.md  demo_knowledge_api.py  inspect_knowledge_base.py  tasks.yaml  tasks_quickstart.yaml
presentation/: .gitignore  Makefile  README.md  ai-assist-presentation.tex
sandbox/: README.md
sandbox/ai-assist/: Dockerfile
sandbox/profiles/dev/: Dockerfile
scripts/: check_markdown_links.py  create-skill
skills/slack-webhook/: SKILL.md
skills/slack-webhook/scripts/: post_message.py
tests/: conftest.py  demo_kg.py  test_agent_api_errors.py  test_agent_kg_save.py  test_agent_max_tokens.py  test_agent_mcp_prompts.py  test_agent_sse.py  test_agent_synthesis.py  test_agent_timeout.py  test_audit.py  test_awl_ast.py  test_awl_cli_validation.py  test_awl_expressions.py  test_awl_parser.py  test_awl_runtime.py  test_awl_visualization.py  test_basic_interactive_mode.py  test_collect_to_report.py  test_command_validation.py  test_commands.py  test_conditions.py  test_config_directory.py  test_config_reload.py  test_connection_discovery.py  test_context.py  test_context_engineering.py  test_context_introspection.py  test_embedding.py  test_escape_watcher.py  test_eval.py  test_execute_mcp_prompt_tool.py  test_file_watchdog.py  test_filesystem_security.py  test_goal_runner.py  test_goal_state.py  test_goal_tools.py  test_hot_reload.py  test_identity.py  test_integration_kg.py  test_introspection_tool_execution.py  (+52 more)
